// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly ExpensesSummary when passing expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h2
      className="page-header__title"
    >
      Total of 
      <span>
        $189.99
      </span>
       for 
      <span>
        3
      </span>
       expense(s)
    </h2>
    <div
      className="page-header__action"
    >
      <Link
        className="btn"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render correctly ExpensesSummary with no expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h3
      className="page-header__title"
    >
      No expenses selected
    </h3>
    <div
      className="page-header__action"
    >
      <Link
        className="btn"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
